# ocaml-sbom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  Makefile  README.md  dune-project  ocaml-sbom.opam  ocaml-sbom.opam.locked  ocaml-sbom.overlay.json  test
.circleci/: config.yml  setup-opam
app/: dune  ocaml_sbom.ml
lib/: Command.mli  util
lib/cdx/: Cdx_export.ml  Cdx_export.mli  CycloneDX_1_6.atd  CycloneDX_1_6.ml  CycloneDX_1_6.mli  CycloneDX_1_7.atd  CycloneDX_1_7.ml  CycloneDX_1_7.mli  Jsonschema2atd_runtime.ml  dune
lib/heuristics/: Dune_vendored_dirs.ml  Dune_vendored_dirs.mli  Git_submodules.ml  Git_submodules.mli  License_files.ml  License_files.mli  Sbom_heuristics.ml  Sbom_heuristics.mli  Scan_file_tree.ml  Scan_file_tree.mli  Vendored_dirs.ml  Vendored_dirs.mli  dune
lib/sbom/: dune  sbom.atd
lib/spdx/: Spdx_3_0_1_adapter.ml  Spdx_export.ml  Spdx_export.mli  dune  spdx_2_3_1_dev.atd  spdx_2_3_1_dev.ml  spdx_2_3_1_dev.mli  spdx_3_0_1.atd  spdx_3_0_1.generated.atd  spdx_3_0_1.ml  spdx_3_0_1.mli  spdx_3_0_1.orig.atd
lib/types/: Opam_purl.ml  Opam_purl.mli  Validate.ml  Validate.mli  dune  ocaml_sbom.atd  ocaml_sbom_overlay.atd  purl.atd
lib/util/: Command.ml  Command.mli  File.ml  File.mli  Global.ml  Global.mli  Path.ml  Path.mli  dune
tests/: Test_heuristics.ml  Test_overlay.ml  Test_overlay.mli  dune  test.ml
tests/test-repo/: .gitmodules  README.md  dune-project  ocaml-sbom-test.opam
tests/test-repo/src/: dune
tests/test-repo/submodules/submodproject/: README.md
