; Allow running the tests by invoking 'dune runtest' which also takes
; care of rebuilding the executable as needed.
(rule
 (alias runtest)
 (package ocaml-sbom)
 (action
   (run ./test.exe --chdir ../../..)
 )
)

; Build the test executable like an ordinary OCaml executable
(executable
 (name test)
 (modules test test_overlay)
 (libraries
   testo
   unix
   sbom_gen
   sbom_util
   sbom_types
 )
)
