; Allow running the tests by invoking 'dune runtest' which also takes
; care of rebuilding the executable as needed.
(rule
 (alias runtest)
 (package ocaml-sbom)
 (action
   (run ./test.exe --chdir ../../..)
 )
)

; Build the test executable like an ordinary OCaml executable
(executable
 (name test)
 (modules test test_overlay test_heuristics)
 (libraries
   testo
   unix
   sbom_gen
   sbom_heuristics
   sbom_util
   sbom_types
 )
)

; We don't need to build this fake project
(data_only_dirs test-repo)
