; Application-wide types, including notably:
; - ocaml-sbom's format specification
; - ocaml-sbom's overlay format specification
;
(library
  (name sbom_types)
  (libraries
    cdx
    yojson
  )
)

(rule
  (targets ocaml_sbom.ml ocaml_sbom.mli)
  (deps ocaml_sbom.atd)
  (action (run atdml %{deps}))
)

(rule
  (targets ocaml_sbom_overlay.ml ocaml_sbom_overlay.mli)
  (deps ocaml_sbom_overlay.atd)
  (action (run atdml %{deps}))

; TODO: make this work
;  (action (chdir %{project_root} (run atdml %{deps})))
)

(rule
  (targets purl.ml purl.mli)
  (deps purl.atd)
  (action (run atdml %{deps}))
)
